# CollAlgo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.MD  compile_commands.json  log  profile_np8.sbatch  requirements.txt  run.sbatch
bench/include/bench/: allgather.h  alltoall.h  bcast.h  gather.h  reduce.h  scatter.h
bench/include/bench/cuda/: bcast.h  reduce.h
bench/src/: allgather.c  alltoall.c  bcast.c  gather.c  main.c  reduce.c  scatter.c
bench/src/cuda/: bcast.cu  reduce.cu
include/CollAlgo/: allgather.h  alltoall.h  bcast.h  bine.h  gather.h  reduce.h  scatter.h  utils.h
include/CollAlgo/cuda/: reduce.h  utils.h
scripts/: butterfly.py  profile_np8_leonardo.sbatch  profile_np8_marenostrum5.sbatch  profile_np8_meluxina.sbatch  profile_np8_sapienza.sbatch  tree.py
src/: allgather.c  alltoall.c  bcast.c  deleted-main.c  gather.c  main.c  reduce.c  scatter.c
src/cuda/: reduce.cu  utils.cu
